# cpp-rpg

./: .gitignore  CMakeLists.txt  README.md
include/Components/: AnimatedSprite.hpp
include/ECS/: World.hpp
include/ECS/Entities/: Entity.hpp
include/Entities/: Entity.hpp  PlayerEntity.hpp
include/Entities/Characters/: Character.hpp  PlayerCharacter.hpp
include/Interface/: Camera.hpp  Console.hpp  Party.hpp
include/Resources/: SpriteSheet.hpp
include/Scenes/: Game.hpp  Scene.hpp
include/System/: Dice.hpp  Navigation.hpp
include/Tools/: MathFunctions.hpp
include/World/: TileMap.hpp
res/editor files/: Idle Sprite.aseprite  Running Sprite.aseprite  map.tmx  tilemap.tsx
res/maps/: map.json
res/sheets/: tilemap.json
src/: Main.cpp
src/Components/: AnimatedSprite.cpp
src/ECS/: World.cpp
src/ECS/Entities/: Entity.cpp
src/Entities/: PlayerEntity.cpp
src/Entities/Characters/: PlayerCharacter.cpp
src/Interface/: Camera.cpp  Camera.hpp  Console.cpp  Party.cpp
src/Resources/: SpriteSheet.cpp  SpriteSheet.hpp
src/Scenes/: Game.cpp  Game.hpp  Scene.hpp
src/World/: TileMap.cpp  TileMap.hpp
